# DefectFill

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertBanner.tsx  InspectionCanvas.tsx  TelemetryPanel.tsx
frontend/hooks/: useInferenceStream.ts
frontend/lib/: protocol.ts
scripts/: run_pipeline.ps1
src/defectfill/: __init__.py  cli.py  config.py  data.py  feature_extractor.py  heatmap.py  optimize.py  patchcore.py  phase1_anogan.py  phase1_synthesis.py  pipeline.py  run_backend.py
src/defectfill/backend/: app.py  protocol.py  stream_service.py
