[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defectfill"
version = "0.1.0"
description = "TensorFlow/Keras real-time two-phase anomaly detection for MVTec AD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tensorflow>=2.15",
  "keras>=3.0",
  "keras-hub>=0.18.0",
  "keras-cv>=0.9.0",
  "numpy>=1.26",
  "opencv-python>=4.10",
  "Pillow>=10.0",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
